# TinFit_1

./: main.py  pyproject.toml  requirements.txt
static/css/: coming-sssoon.css
templates/: form.html  index.html  success.html
